tests/typing/bad/testfile-ampersand-2.c

int main() { int x, y; &(x+y); }
